# RecipeApp

./: CMakeLists.txt
include/: database.h  main.h
src/: database.cpp  main.cpp
tests/: test_database.cpp
